welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: ';' expected but 'else' found.
  } else {
    ^close10:13: error: Unmatched closing brace '}' ignored here
 }
 ^